add shapes and content

--- a/src/index.html
+++ b/src/index.html
@@ -3,15 +3,34 @@
   <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
-    <title>KALA Noodle & Grill</title>
+    <title>Kala Noodle & Grill</title>
   </head>
   <body>
-    <div class="green-circle">
-      <h1>KALA</h1>
+    <div class="header">
+      <div class="banner">
+        <div class="red-triangle">
+        </div>
+        <div class="green-circle">
+          <h1>KALA</h1>
+        </div>
+        <div class="yellow-circle">
+          <h2>NOODLE</h2>
+          <h2>&</h2>
+          <h2>GRILL</h2>
+        </div>
+        <div class="yellow-rectangle">
+          <h2>2534 SE BELMONT</h2>
+          <h3>- ORDER TAKEOUT -</h3>
+          <h2>971.302.6115</h2>
+        </div>
+        <img class="banner-image" src="img/banner.jpeg">
+        <div class="business-details">
+          <h2>HOURS:</h2>
+          <h3>CLOSED MONDAY</h3>
+          <h3>TUESDAY - SATURDAY : 4PM - 10PM</h3>
+          <h3>SUNDAY : 5PM - 9PM</h3>
+        </div>
+      </div>
     </div>
-    <div class="yellow-circle">
-      <h2>Noodle<br>&<br>Grill</h2>
-    </div>
-    <img src="img/banner.jpeg">
   </body>
 </html>
