--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,9 @@
   <body>
     <div class="header">
       <div class="banner">
-        <div class="red-triangle">
-        </div>
+        <a class="red-triangle" href="https://www.yelp.com/biz/kala-noodle-and-grill-portland" target="_blank">
+          <img src="img/yelp.png">
+        </a>
         <div class="green-circle">
           <h1>KALA</h1>
         </div>
@@ -29,6 +30,54 @@
           <h3>CLOSED MONDAY</h3>
           <h3>TUESDAY - SATURDAY : 4PM - 10PM</h3>
           <h3>SUNDAY : 5PM - 9PM</h3>
+        </div>
+      </div>
+    </div>
+    <div class="menu-section">
+      <div class="menu">
+        <div class="starters">
+          <h1>SOUP</h1>
+          <h3>SMALL $4 LARGE $8</h3>
+          <p>Choice of Chicken, Tofu, Veggie</p>
+          <p>Choice of Shrimp add $1.50</p>
+          <h2>TOM YUM*</h2>
+          <p>Thai famous hot and sour soup. Lemon glass, kaffir lime leaves, lime juice, tomato, mushroom and cilantro.</p>
+          <h2>TOM KHA</h2>
+          <p>Comforting of coconut milk with kaffir lime leaves, galangal, tomato, mushroom, cilantro and lime juice.</p>
+          <h1>APPETIZERS</h1>
+          <h2>COCONUT SHRIMP (6) $7</h2>
+          <p>Deep fried shrimp with coconut flake, served with sweet sauce.</p>
+          <h2>CRAB RANGOON (4) $6</h2>
+          <p>Crispy wonton wrappers containing a creamy mix of crab meat, served with sweet and sour sauce.</p>
+          <h2>FRIED TOFU (8) $6</h2>
+          <p>Deep fried tofu served with our homemade sauce and chopped peanut.</p>
+          <h2>FRIED WONTON (6) $5</h2>
+          <p>Fried golden wonton stuffed with seasoned ground pork, served with sweet sauce.</p>
+          <h2>POT STICKERS (6) $5</h2>
+          <p>Pot stickers filled pork and vegetables, served with house ginger sauce.</p>
+          <h2>THAI HOT WINGS $7.5</h2>
+          <p>Everyone’s favorite! Chicken wings topped with our Thai spicy sauce.</p>
+          <h2></h2>
+          <p></p>
+        </div>
+        <div class="beverages">
+          <h1>BEVERAGES</h1>
+          <h3>$2 EACH</h3>
+          <h3>APPLE JUICE</h3>
+          <h3>ICED TEA</h3>
+          <h3>MANGO JUICE</h3>
+          <h3>SODA</h3>
+          <h3>THAI ICED COFFEE</h3>
+          <h3>THAI ICED TEA</h3>
+          <h1>SIDES<h1>
+          <h3>FRIED EGG $1.5</h3>
+          <h3>PEANUT SAUCE $1.5</h3>
+          <h3>STEAMED RICE (BROWN/JASMINE) $2</h3>
+          <h3>STEAMED VEGETABLE $2</h3>
+          <h3>STEAM NOODLE $2</h3>
+          <h3>STICKY RICE $2</h3>
+          <h1>DESSERT</h1>
+          <h3>ICE CREAM $3</h3>
         </div>
       </div>
     </div>
