add transparent texture, remove triangle

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
   <body>
     <div class="header">
       <div class="banner">
-        <a class="red-triangle" href="https://www.yelp.com/biz/kala-noodle-and-grill-portland" target="_blank">
+        <a class="yelp" href="https://www.yelp.com/biz/kala-noodle-and-grill-portland" target="_blank">
           <img src="img/yelp.png">
         </a>
-        <div class="green-circle">
+        <div class="big-circle">
           <h1>KALA</h1>
         </div>
         <div class="yellow-circle">
