add yelp logo animation

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <div class="header">
       <div class="banner">
         <a class="yelp" href="https://www.yelp.com/biz/kala-noodle-and-grill-portland" target="_blank">
-          <img src="img/yelp.png">
+          <img class="pulse" src="img/yelp.png">
         </a>
         <div class="big-circle">
           <h1>KALA</h1>
